# stock_app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  readme.md
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  user_interface.cpp  user_interface.hpp
cmake/: FindPQXX.cmake
common/: CMakeLists.txt  common.cpp
common/include/: common.hpp
config/: CMakeLists.txt  config.cpp  config.hpp  server_config.ini
proto/: CMakeLists.txt  proto_example.proto  trade_market_protocol.proto
server/: CMakeLists.txt  auth.cpp  auth.hpp  client_data_manager.cpp  client_data_manager.hpp  core.cpp  core.hpp  database.cpp  database.hpp  i_database.hpp  main.cpp  order_id_generator.cpp  order_id_generator.hpp  order_queue.cpp  order_queue.hpp  server.cpp  server.hpp  session_client_connection.cpp  session_client_connection.hpp  session_manager.cpp  session_manager.hpp  time_order_utils.cpp  time_order_utils.hpp
tests/: CMakeLists.txt  core_test.cpp  main_test.cpp  mock_database.hpp
tests/mocks/: mock_database.hpp
